Fixed weird center spacing for club cards on mobile

--- a/client/src/components/clubs/clubs.scss
+++ b/client/src/components/clubs/clubs.scss
@@ -19,7 +19,7 @@
 
 @include media-phone-down {
     .club-card-list {
-        padding: 1rem 0 0.5rem;
+        padding: 1rem 2% 0.5rem;
         grid-template-columns: repeat(auto-fill, 50%);
         row-gap: 0.75rem;
         align-items: center;
